--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
       "eas": {
         "projectId": "102b5420-8e0a-4615-9e8b-985b0b9402ec"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/102b5420-8e0a-4615-9e8b-985b0b9402ec"
     }
   }
 }
