--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy Updates
 
 on:
   push:
@@ -7,8 +7,9 @@ on:
     branches: [main]
 
 jobs:
-  build-and-deploy:
+  deploy-update:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
       - name: Checkout code
@@ -29,25 +30,19 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Build preview for PR
+      - name: Deploy preview update for PR
         if: github.event_name == 'pull_request'
         run: |
-          echo "Building preview for PR #${{ github.event.number }}"
-          eas build --platform all --profile preview --non-interactive --message "Preview build for PR #${{ github.event.number }}"
+          echo "Deploying preview update for PR #${{ github.event.number }}"
+          eas update --branch preview --message "Preview update for PR #${{ github.event.number }}: ${{ github.event.pull_request.title }}"
 
-      - name: Build production on main
+      - name: Deploy production update on main
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          echo "Building production for main branch"
-          eas build --platform all --profile production --non-interactive --message "Production build from commit ${{ github.sha }}"
-
-      - name: Deploy OTA update on main
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: |
-          echo "Deploying OTA update to production channel"
+          echo "Deploying production update"
           eas update --branch production --message "Auto-update from commit ${{ github.sha }}: ${{ github.event.head_commit.message }}"
 
-      - name: Comment on PR with build info
+      - name: Comment on PR with update info
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
@@ -56,5 +51,23 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🚀 Preview build started! Check the Actions tab for progress.'
-            }) 
+              body: '🚀 Preview update deployed! Users with preview builds will receive this update automatically.'
+            })
+
+      - name: Comment on main push with update info
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: commit } = await github.rest.repos.getCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.sha
+            });
+            
+            await github.rest.repos.createCommitComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              commit_sha: context.sha,
+              body: '✅ Production update deployed! Users will receive this update automatically on next app launch.'
+            }); 
