--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -90,6 +90,12 @@ jobs:
           git commit -m "chore: bump version to $NEW_VERSION [skip ci]"
           git push
 
+      - name: Set Runtime Version
+        run: |
+          APP_VERSION=$(jq -r '.expo.version' app.json)
+          MAJOR_VERSION=$(echo $APP_VERSION | cut -d. -f1)
+          jq --arg version "$MAJOR_VERSION" '.expo.runtimeVersion = $version' app.json > tmp.json && mv tmp.json app.json
+
       - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
