--- a/app.json
+++ b/app.json
@@ -35,9 +35,7 @@
         "projectId": "102b5420-8e0a-4615-9e8b-985b0b9402ec"
       }
     },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "1.0.2",
     "updates": {
       "url": "https://u.expo.dev/102b5420-8e0a-4615-9e8b-985b0b9402ec",
       "enabled": true,
