feat: add logo to startup screen and fix iOS icon caching\n\n- Added custom logo image to StartupScreen above the title\n- Logo is responsive with different sizes for tablet/phone\n- Added circular styling with shadow effects for professional look\n- Incremented version to 1.0.5 to force iOS icon cache refresh\n- Added iOS buildNumber to help with icon updates\n- Logo appears prominently on app startup for better branding\n\nThis ensures users see the custom logo both as app icon and when launching the app.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "2468_counter",
     "slug": "2468_counter",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -15,6 +15,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "tracker.twofoursixeight.com",
+      "buildNumber": "6",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
