feat: final polish - update app name and clean up debug output\n\n- Changed app name from '2468_counter' to '2468 Scorekeeper (Lite)' for iOS display\n- Removed debug information section from SettingsScreen\n  - Removed Channel, Update ID, and Version display from main settings\n  - Debug info is still available in the 'Check for Updates' modal\n  - Cleaner, more user-friendly settings interface\n- Removed unused debug styles (debugSection, debugText)\n\nThe app now has a professional name and clean settings screen while maintaining full update functionality in the dedicated update modal.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "2468_counter",
+    "name": "2468 Scorekeeper (Lite)",
     "slug": "2468_counter",
     "version": "1.0.5",
     "orientation": "default",
