Enable Fast Refresh and add development debugging tools
- Add metro.config.js with Fast Refresh enabled
- Add enhanced npm scripts for debugging (start:debug, web:debug, clear)
- Add VS Code launch configuration for React Native Debugger
- Optimize Metro bundler with source maps and experimental features
- Remove debug overlay components (reverted visual debugging changes)
- Keep core debugging infrastructure for future development

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
+    "start:dev": "expo start --dev-client",
+    "start:debug": "expo start --dev-client --localhost",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "web:debug": "expo start --web --localhost",
+    "clear": "expo start --clear"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
