Implement dual hand feature for 8-point area
- Add DualHandCondition interface and Area interface extensions
- Add dual hand mode toggle with ↕️/⚡ icons next to 8-point area label
- Create High Hand (↑) and Low Hand (↓) sections when dual mode enabled
- Update point calculation logic to handle dual hand conditions
- Add comprehensive styling for all layout modes (portrait/landscape, phone/tablet)
- Maintain backward compatibility with standard single-selection mode

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "2468 Scorekeeper (Lite)",
     "slug": "2468_counter",
-    "version": "1.1.0",
+    "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -14,8 +14,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "tracker.twofoursixeight.com",
-      "buildNumber": "6",
+      "bundleIdentifier": "com.erikwagner.2468scorekeeperLite",
+      "buildNumber": "2",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -43,8 +43,9 @@
       "fallbackToCacheTimeout": 0,
       "checkAutomatically": "ON_LOAD",
       "requestHeaders": {
-        "expo-channel-name": "preview"
+        "expo-channel-name": "production"
       }
-    }
+    },
+    "owner": "maverik77"
   }
 }
